# simplefractions

./: .gitignore  DEVELOP.md  README.md  pyproject.toml  rational_from_float.py  setup.cfg  setup.py  test_rational_from_float.py
.github/workflows/: on-commit.yml  on-release.yml  python-package.yml
proofs/: fraction_to_float.py  fraction_to_float.tex
simpfrac/: __init__.py
simpfrac/test/: test_rational_from_float.py
simplefractions/: __init__.py  _simplest_in_interval.py  sided_fraction.py
simplefractions/test/: test_rational_from_float.py  test_simplefractions.py
src/simplefractions/: __init__.py  _simplest_in_interval.py
src/simplefractions/test/: test_simplefractions.py
