[build-system]
requires = ['setuptools>=61', 'setuptools-scm[toml]>=6.2', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'simplefractions'
description = 'Find the simplest fraction for a given float or interval'
readme = 'README.md'
requires-python = '>=3.6'
license = {file = 'LICENSE'}
authors = [
    {name = 'Mark Dickinson', email = 'dickinsm@gmail.com'}
]
keywords = ['fractions', 'continued fractions', 'approximation']
classifiers = [
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Topic :: Scientific/Engineering :: Mathematics',
]
dynamic = ['version']

[project.urls]
source = 'https://github.com/mdickinson/simplefractions'

[tool.black]
target-version = ['py36']

[tool.isort]
profile = 'black'
order_by_type = 'False'

[tool.setuptools_scm]
version_scheme = 'release-branch-semver'
