[build-system]
requires = ['setuptools>=61', 'setuptools-scm[toml]>=6.2', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'simplefractions'
description = 'Find the simplest fraction for a given float or interval'
readme = 'README.md'
requires-python = '>=3.8'
authors = [{name = 'Mark Dickinson', email = 'dickinsm@gmail.com'}]
keywords = ['fractions', 'continued fractions', 'approximation']
classifiers = [
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Topic :: Scientific/Engineering :: Mathematics',
]
dynamic = ['version']

[project.urls]
source = 'https://github.com/mdickinson/simplefractions'

[tool.mypy]
strict = true

[tool.ruff.lint]
extend-select = ["I"]

[tool.setuptools_scm]
version_scheme = 'release-branch-semver'
