[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[project]
name = 'simplefractions'
version = "1.4.0"
description = 'Find the simplest fraction for a given float or interval'
readme = 'README.md'
requires-python = '>=3.10'
authors = [{name = 'Mark Dickinson', email = 'dickinsm@gmail.com'}]
keywords = ['fractions', 'continued fractions', 'approximation']
classifiers = [
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Topic :: Scientific/Engineering :: Mathematics',
]

[project.urls]
source = 'https://github.com/mdickinson/simplefractions'

[dependency-groups]
dev = [
    "coverage>=7.6.1",
    "mypy>=1.14.1",
    "pytest>=8.3.5",
]

[tool.coverage.run]
branch = true
source_pkgs = ["simplefractions"]
command_line = "-m pytest"

[tool.mypy]
packages = ["simplefractions"]
strict = true

[tool.pytest.ini_options]
addopts = ["--pyargs", "--import-mode=importlib"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
extend-select = ["I", "UP", "W"]  # isort, pyupgrade, pycodestyle warnings
