[metadata]
name = simplefractions
version = 1.2.0
url = "https://github.com/mdickinson/simplefractions"
author = Mark Dickinson
author_email = dickinsm@gmail.com
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Mathematics
license_files = LICENSE
description = "Find the simplest fraction for a given float or interval"
long_description = file: README.md
long_description_content_type = text/markdown
keywords = fractions, continued fractions, approximation

[options]
packages = find:
python_requires = >= 3.6

[flake8]
max-line-length = 88

[isort]
profile = black
order_by_type = False

[mypy-setuptools]
ignore_missing_imports = True
